qtype-gapfill as scope setter and other fixes

--- a/styles_app.css
+++ b/styles_app.css
@@ -1,5 +1,5 @@
 /* the gap where answers are dropped/keyed in */
-.que.gapfill input[type=text] {
+.qtype-gapfill input[type=text]{
     background: white;
     border: solid black thin;
     border-radius: 4px;
@@ -8,8 +8,13 @@
     margin-top: 1px;
     padding: 1px;
 }
+/* dropped text is centred, keyed in text is not */
+.qtype-gapfill .droptarget{
+    text-align:center;  
+}
 
-span.draggable.answers {
+
+.qtype-gapfill span.draggable.answers {
     background: white;
     border: solid 1px;
     box-shadow: 3px 3px 4px #000;
@@ -26,49 +31,44 @@ span.draggable.answers {
     border-radius: 4px;
     -webkit-box-shadow: 3px 3px 4px #000;
 }
+    /**
+    When an answer is picked the shadows
+    should make it look a bit like it has been
+    pressed in */
+    .qtype-gapfill span.draggable.answers.picked{
+        /*a very light grey */
+        background:#F8F8F8;
+        -moz-box-shadow:    -1px -1px 1px  rgba(119, 119, 119, 0.75);
+        -webkit-box-shadow: -1px -1px 1px  rgba(119, 119, 119, 0.75);
+        box-shadow:         -1px -1px 1px  rgba(119, 119, 119, 0.75);
+    }
+    .qtype-gapfill span.aftergapfeedback {
+        font-style: italic;
+        font-weight: bold;
+        color: green;
+    }
 
-.que.gapfill span.draggable.answers:hover {
-    box-shadow: 2px 2px 6px #000;
-    -moz-box-shadow: 2px 2px 6px #000;
-    -webkit-box-shadow: 2px 2px 6px #000;
-}
+    .gapfilltable td{
+        border:solid;
+        border-width:thin;
+        padding:4px;
+    }
+    .gapfilltable th{
+        border:solid;
+        border-width:thin;
+        background-color: lightgray;
+    }
+    .gapfilltable caption{
+        border-bottom:solid;
+        border-width:thin;
+    }
+    .gapfilltable-col{
+        background-color: lightgray;
+    }
+    .gapfilltable-row{
+        background-color: lightgray;
+    }
 
-/**
-When an answer is picked the shadows
-should make it look a bit like it has been
-pressed in */
-span.draggable.answers.picked {
-    /*a very light grey */
-    background: #f8f8f8;
-    -moz-box-shadow: -1px -1px 1px rgba(119, 119, 119, 0.75);
-    -webkit-box-shadow: -1px -1px 1px rgba(119, 119, 119, 0.75);
-    box-shadow: -1px -1px 1px rgba(119, 119, 119, 0.75);
-}
-/*Displays the correct answer in delimiters if an
-incorrect answer was entered */
-span.aftergapfeedback {
-    color: green;
-    font-style: italic;
-    font-weight: bold;
-}
-.gapfilltable td {
-    border: solid;
-    border-width: thin;
-}
-
-.gapfillfirstcol {
-    background-color: #bcbbbb;
-}
-
-.gapfillcol {
-    background-color: lightgray;
-}
-
-.gapfilltable th {
-    background-color: lightgray;
-    border: solid;
-    border-width: thin;
-}
 
 .gapfilltable caption {
     border-bottom: solid;
